Tidied up formulas

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -490,3 +490,20 @@ month={9},
   year={2023},
   url={https://eth2book.info/capella/annotated-spec/#reward-and-penalty-calculations},
 }
+
+@article{frost2023B,
+  author={Frost, Jim},
+  journal={Statistics By Jim},
+  month={2},
+  title={{Percentiles: Interpretations and Calculations}},
+  year={2023},
+  url={https://statisticsbyjim.com/basics/percentiles},
+}
+
+@misc{buterin2023,
+  author={Buterin, Vitalik},
+  month={5},
+  title={{Don't overload Ethereum's consensus}},
+  year={2023},
+  url={https://vitalik.ca/general/2023/05/21/dont_overload.html},
+}
