--- a/bibliography.bib
+++ b/bibliography.bib
@@ -507,3 +507,11 @@ month={9},
   year={2023},
   url={https://vitalik.ca/general/2023/05/21/dont_overload.html},
 }
+
+@misc{neuder2023,
+  author={Neuder, Mike and Drake, Justin},
+  month={6},
+  title={{Why enshrine Proposer-Builder Separation? A viable path to ePBS}},
+  year={2023},
+  url={https://ethresear.ch/t/why-enshrine-proposer-builder-separation-a-viable-path-to-epbs/15710/20},
+}
